2007-11-18  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm (get_sniffed_type): Return also the official
	type in list context.

2007-11-18  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: Sniffing with leading white space
	ignoring (HTML5 revisions 1013 and 1016).

2007-11-18  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: HTML5 revision 1013 changes, except for leading
	white spaces, are implemented.

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (parse_char_string): Set |inner_encoding|
	attribute if possible.

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (parse_byte_string): New method.
	(parse_char_string): New alias for |parse_string|.
	(main phase): Invoking "change the encoding" algorithm if desired.

	* HTML.pod: Updated.

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pod (get_inner_html): Removed.

	* Makefile (HTML-all, HTML-clean): New.

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (get_inner_html): Removed (moved to HTML/Serializer.pm).

2007-11-08  Wakaba  <wakaba@suika.fam.cx>

	* mklinktypelist.pl: s/noreferer/noreferrer/ (HTML5 revision 1132).

2007-11-04  Wakaba  <wakaba@suika.fam.cx>

	* Makefile: |CacheManifest.html| is added.

	* CacheManifest.pod: New file.

2007-11-04  Wakaba  <wakaba@suika.fam.cx>

	* CacheManifest.pm: New module.

2007-11-04  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Support for application cache selection algorithm
	callback.

2007-11-04  Wakaba  <wakaba@suika.fam.cx>

	* mklinktypelist.pl: Support for rel=noreferer (HTML5 revision 1118).

2007-10-17  Wakaba  <wakaba@suika.fam.cx>

	* Makefile (clean): New rule.

	* NanoDOM.pm (public_id, system_id): New attributes.

2007-10-17  Wakaba  <wakaba@suika.fam.cx>

	* Makefile (CSS-all, CSS-clean, clean): New rules.

2007-10-14  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (check_document): Support for
	new |is_xml_root| flag.
	(check_element): Support for new |pluses| state.
	(_add_pluses): New method.