@@ -1,5 +1,11 @@
 2007-11-18  Wakaba  <wakaba@suika.fam.cx>
 
+	* ContentChecker.pm (check_document): Check the existence
+	of character encoding declaration and selection of encoding
+	for HTML document.
+
+2007-11-18  Wakaba  <wakaba@suika.fam.cx>
+
 	* ContentType.pm (get_sniffed_type): Return also the official
 	type in list context.
 
